--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link type="text/css" href="style.css" rel="stylesheet"/>
+    <link type="text/css" href="style.css" rel="stylesheet" />
     <title>Towers of Hanoi</title>
 </head>
+
 <body>
-    <h1>Towers of Hanoi</h1>
+    <div id="header">
+        <h1>Towers of Hanoi</h1>
+        <h3>Click in the box to pick up a disk, click in a separate box to drop disk into that box.</h3>
+        <h3>The goal is to move all the disks to the last box in ascending order, can't place a large disk on a smaller disk.</h3>
+    </div>
     <div id="wrapper">
         <div id="start" class="box">
-            <div id="disk4"></div>
-            <div id="disk3"></div>
-            <div id="disk2"></div>
-            <div id="disk1"></div>
+            <div id="disk4" class="disks"></div>
+            <div id="disk3" class="disks"></div>
+            <div id="disk2" class="disks"></div>
+            <div id="disk1" class="disks"></div>
         </div>
         <div id="offset" class="box"></div>
         <div id="end" class="box"></div>
@@ -22,4 +28,5 @@
 
     <script type="text/javascript" src="main.js"></script>
 </body>
+
 </html>
